--- a/src/app.html
+++ b/src/app.html
@@ -4,10 +4,24 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+		<link
+			href="https://fonts.googleapis.com/css?family=Bree+Serif|Fira+Sans+Condensed&amp;display=swap"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="/global.css" />
+		<link rel="stylesheet" href="/icomoon/style.css" />
 		%sveltekit.head%
 	</head>
-	<body>
+	<body
+		style="
+			--orange: 27, 87%, 70%;
+			--red: 0, 100%, 45%;
+			--green: 116, 81%, 45%;
+			--blue: 216, 74%, 43%;
+			--gray: 216, 0%, 35%;
+			--bg-color-form: 0, 0%, 100%;
+		"
+	>
 		%sveltekit.body%
 	</body>
 </html>
