--- a/src/app.html
+++ b/src/app.html
@@ -19,7 +19,7 @@
       --green: 116, 81%, 45%;
       --blue: 216, 74%, 43%;
       --gray: 216, 0%, 35%;
-      --bg-color-form: 0, 0%, 100%;
+      --form-bg-color: 0, 0%, 100%;
     "
   >
     %sveltekit.body%
