--- a/src/app.html
+++ b/src/app.html
@@ -7,13 +7,11 @@
   <meta name="viewport" content="width=device-width" />
   <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Fira+Sans+Condensed&amp;display=swap"
     rel="stylesheet" />
-  <link rel="stylesheet" href="/global.css" />
-  <link rel="stylesheet" href="/icomoon/style.css" />
   %sveltekit.head%
 </head>
 
-<body data-sveltekit-preload-data="hover">
-  <div style="display: contents">%sveltekit.body%</div>
+<body class="antialiased" data-sveltekit-preload-data="hover">
+  <div class="contents">%sveltekit.body%</div>
 </body>
 
 </html>
